--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -4,9 +4,9 @@ Die Durchführung dieser Arbeit erfolgte im Frühlingssemester 2018 im Rahmen ei
 
 In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein standardisierter Fragebogen anhand der für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten} und \textit{subjektives Wohlbefinden}, sowie der soziodemografischen Daten zusammengestellt. Dazu wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setze sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen und den ausgewählten Erhebungsinstrumenten zusammen. 
 
-Die Umsetzung des Fragebogens richtete sich an die von der Umfragesoftware Enterprise Feedback Suite Version 10.9 der Firma Questback GmbH vorgegebenen Frageoptionen. Ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden. Gestartet wurde die Umfrage mit einer kurzen Einführung, mit der Anonymitätserklärung, dem Hinweis auf den Wettbewerb und die Versuchspersonenstunden. Danach folgten die einzelnen Erhebungsinstrumente, beginnend mit der Erfassung der demographischen Daten, gefolgt vom Mediennutzungs-Fragebogen, dem Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen zum subjektiven Wohlbefinden. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme an einem Wettbewerb oder dem Erhalt für Versuchspersonenstunden, wenn sie Studierende der ZHAW in Psychologie waren, entscheiden. Zudem mussten die Teilnehmen angeben, ob sie die Fragen seriös ausgefüllt hatten. Der Fragebogen wurde mittels Pretest auf seine Funktionalität hin überprüft und erfolgte in zwei Schritten. Einerseits erlaubte die Software eine elektronische Testung des Fragebogens auf Korrektheit betreffend der möglichen Antwortpfaden. Dabei ging es um die Auswählbarkeit der Frageoptionen und die Erreichbarkeit aller aufgestellter Frageitems. In einem weiteren Schritt wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, die den kompletten Umfragebogen durchspieltn. Damit sollte sichergestellt werden, dass die Fragen und deren Anweisungen verständlich formuliert wurden und die Beantwortung der Fragen möglich war. Vor der Aktivschaltung des Fragebogens wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert.
+Die Umsetzung des Fragebogens richtete sich an die von der Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018} vorgegebenen Frageoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden). Gestartet wurde die Umfrage mit einer kurzen Einführung, mit der Anonymitätserklärung, dem Hinweis auf den Wettbewerb und die Versuchspersonenstunden. Danach folgten die einzelnen Erhebungsinstrumente, beginnend mit der Erfassung der demographischen Daten, gefolgt vom Mediennutzungs-Fragebogen, dem Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen zum subjektiven Wohlbefinden. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme an einem Wettbewerb oder dem Erhalt für Versuchspersonenstunden, wenn sie Studierende der ZHAW in Psychologie waren, entscheiden. Zudem mussten die Teilnehmen angeben, ob sie die Fragen seriös ausgefüllt hatten. Der Fragebogen wurde mittels Pretest auf seine Funktionalität hin überprüft und erfolgte in zwei Schritten. Einerseits erlaubte die Software eine elektronische Testung des Fragebogens auf Korrektheit betreffend der möglichen Antwortpfaden. Dabei ging es um die Auswählbarkeit der Frageoptionen und die Erreichbarkeit aller aufgestellter Frageitems. In einem weiteren Schritt wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, die den kompletten Umfragebogen durchspieltn. Damit sollte sichergestellt werden, dass die Fragen und deren Anweisungen verständlich formuliert wurden und die Beantwortung der Fragen möglich war. Vor der Aktivschaltung des Fragebogens wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert.
 
-Die Aufschaltdauer der Umfrage dauerte knapp fünf Monate, von Mitte Januar bis Ende Mai 2018. In diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
+Nach der Fertigstellung der Umfrage wurde diese für die Teilnehmer online geschalten. Ab diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
 
 Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende July 2018 zur Bewertung eingereicht.
 
@@ -59,7 +59,14 @@ Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklic
 TBD: Operationalisierung:
 
 
-\subsection{Datenerhebung}
+\subsection{Datenerhebung \& Rekrutierung}
+Zur Datengewinnung wurde die von der ZHAW zur Verfügung gestellten Umfragesoftware Enterprise Feedback Suite in der Version 10.9 der Firma \citeA{Questback2018} verwendet. Der Fragebogen wurde mit Hilfe der zur Verfügung gestellten Dokumentation kreiert \cite{EFS2016} und wurde Mitte Januar bis Ende Mai 2018 aktiv geschaltet.  Der Zugang zur Befragung erfolgte über die von der Firma \citeA{Questback2018} zur Verfügung gestellten öffentlichen Internetadresse, welche zum Zeitpunkt der Befragung wie folgt lautete: https://ww2.unipark.de/uc/elternfragebogen/.
+
+Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel dieser Untersuchungen in der Erfassung der Veränderung der abhängigen Varibalen Mediennutzung anhand der unabhängigen Variablen Bindung und Stress ist und sich dieses Vorgehen als ökonomisch und praktikabel im Hinblick auf die Forschungsfrage herausstellte \cite{TUDresden2015}. Für den Versand der Umfrage wurde ein Infomail und ein Infozettel (Flyer) mit den wichtigsten Angabe zur Studie und dem Link zur Umfrage erstellt (siehe dazu \titleref{app:Mailing} und \titleref{app:Flyer} im Anhang). Der Flyer wurde zusätzlich in Papierform ausgedruckt. Für den Versand des Flyers und des Infomailings wurden unterschiedliche Kanäle verwendet: Einerseits wurden diese per Post für die jeweilige Auslage und den Aushang versendet, andererseits erfolgte der Versand elektronisch über Mail, Facebook-Posting und Text-Nachrichten. Zudem wurde der Flyer auf unterschiedlichen einschlägigen Webseiten publiziert. Um den Medienbruch möglichst gering zu halten, wurde wann immer möglich versucht, den Link für die Umfrage elektronisch zugänglich zu machen. 
+
+Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \titleref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
+
+\textit{TBD: Beschreibung der Datenbereinigung:} Am Ende der Umfrage erfolgte die Datenbereinigung...
 
 
 \subsection{Beschreibung der Stichprobe}
