--- a/content/Anhang/Umfragebogen.tex
+++ b/content/Anhang/Umfragebogen.tex
@@ -1,12 +1,16 @@
 Der im Folgenden abgebildete Fragebogen stellt eine leichte Abwandlung des originalen Onlinefragebogens dar, da die Umsetzung der grafischen Elemente zwecks Lesbarkeit in diesem Dokument vereinfacht wurden. Inhaltlich wurden keine Anpassungen vorgenommen.
 
+\begin{flushleft}
 \subsection{Startseite}
 \textbf{Herzlich willkommen zum Elternfragebogen}
 
+\vspace{2mm}
 Vielen Dank, dass Sie an unserer Studie teilnehmen. Die Befragung dauert ca. 10 bis 15 Minuten. Die Daten werden vollständig anonym erfasst. Es sind keine Rückschlüsse auf einzelne Probanden möglich. Wichtig ist, dass Sie die Fragen ehrlich beantworten. Es gibt keine richtig oder falschen Antworten. Es ist kein Leistungstest. Es geht um Ihre persönliche Meinung.
 
+\vspace{2mm}
 Ziel dieser Arbeit ist es, die Mediennutzung von Eltern mit einem oder mehreren Kindern im Alter zwischen 0 und 1 Jahr zu erfassen. Dabei sollten Sie das Kind an mindestens zwei aufeinanderfolgenden Stunden pro Woche alleine betreuen.
 
+\vspace{2mm}
 Am Schluss der Umfrage haben Sie die Möglichkeit, an der Verlosung der Gutscheine (10 x CHF 50) teilzunehmen oder sich Versuchspersonenstunden (0.5 VPStunden) anrechnen zu lassen.
 
 \begin{figure}[hbtp]
@@ -57,9 +61,10 @@ Zuerst folgen ein paar Angaben zu Ihrer Person und Ihrem Kind im Alter zwischen 
 \subsection{Medien und Mediennutzung}
 Im Folgenden werden Sie gebeten, Angaben über verschiedene Medien-Tätigkeiten so exakt wie möglich zu machen, die Sie während der Betreuung von Ihrem Kind ausüben. Stellen Sie sich dabei die letzte Situation vor, in der Sie während mindestens zwei Stunden alleine mit Ihrem Kind waren.
 
+\vspace{2mm}
 Welche der folgenden Geräte und Medien haben Sie während der letzten Betreuung beruflich oder privat genutzt?
 
-\begin{longtable}[c]{ |p{1em}|p{12em}|p{5em}|p{5em}|p{5em}|p{5em}|}
+\begin{longtable}[c]{ |p{1em}|p{12em}|p{4em}|p{4em}|p{4em}|p{4em}|}
   %\caption{Demografische Daten}\label{tab:DemografischeDaten}\\
  
   \hline
@@ -94,3 +99,5 @@ Welche der folgenden Geräte und Medien haben Sie während der letzten Betreuung
 \end{longtable}
 
 Welche Medientätigkeiten in Minuten haben Sie während der letzten Betreuung im Beisein Ihres Kindes genutzt? Bitte geben Sie die Zeit in Minuten an und unterscheiden Sie, ob das Kind geschlafen hat oder wach war.
+
+\end{flushleft}
