--- a/main.tex
+++ b/main.tex
@@ -104,9 +104,19 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/Anhang/Umfragebogen.tex}
 \newpage
 
+% Mailing
+\section{Mailing}\label{app:Mailing}
+\input{content/Anhang/Mailing.tex}
+\newpage
+
 % Flyer für die Rekrutierung
 \section{Flyer}\label{app:Flyer}
 \input{content/Anhang/Flyer.tex}
+\newpage
+
+% Rekrutierung
+\section{Rekrutierung}\label{app:Rekrutierung}
+\input{content/Anhang/Rekrutierung.tex}
 \newpage
 
 % Ehrenwörtliche Erklärung
