sec:Methode - Stichprobe

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -70,6 +70,28 @@ Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine deta
 
 
 \subsection{Beschreibung der Stichprobe}
+Die Stichprobe umfasste insgesamt 233 Personen. Die Merkmale Geschlecht, Alter (in Jahren), etc. sind in Tabelle \ref{table:Stichprobe} dargestellt.
+
+\begin{table}[htbp]
+
+\begin{tabular}{m{0.5em}  m{10em}  m{5em}} 
+  \hline
+  \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
+  \hline
+  \multicolumn{2}{l}{Geschlecht} \\ 
+   & weiblich & 212 (91)\\ 
+   & männlich & 20 (8.6)\\ 
+   & keine Angbabe & 1 (.4)\\ 
+   
+  \multicolumn{2}{l}{Alter in Jahren} \\
+  & $M$ (Min./Max.) & 33.8 (20/48) \\
+  & $SD$ & 4.6 \\
+   
+  \hline
+\end{tabular}
+\caption{Gesamtstichprobe}
+\label{table:Stichprobe}
+\end{table}
 
 
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
