sec:Methode - skala bindung erweitert

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -27,7 +27,7 @@ Die Fragebogenitems wurden basierend auf den Vorlagen der Erhebungsinstrumenten 
 \subsubsection{Bindung: Adult Attachment Scale (AAS)}\label{sec:AAS}
 Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \citeA{Schmidt2004} ins Deutsche übersetzte Adult Attachment Scale (AAS) von \citeA{Collins1990} verwendet. Dieser versucht die Bindung über die Selbstbeschreibungsmasse zu erfassen, in Ahnlehnung an die 1-Item-Selbstbeschreibungsmasse von \citeA{Hazan1987}. Dabei gilt dieser gemäss \citeA{Fraley2000} als einer der weit verbreiteten Selbsterfassungsbögen im englischsprachigen Raum.
 
-Der ursprüngliche AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1) bis \enquote{stimmt genau} eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertraut, dass andere für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
+Der AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1), \enquote{stimmt eher nicht} (2), \enquote{stimmt teils / teils} (3), \enquote{stimmt eher} (4) bis \enquote{stimmt genau} (5) eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertraut, dass andere für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
 
 Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \titleref{app:AAS}).
 
