sec. Methode: AAS

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -6,7 +6,7 @@ In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein st
 
 Die Umsetzung des Fragebogens richtete sich an die von der Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018} vorgegebenen Frageoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden). Gestartet wurde die Umfrage mit einer kurzen Einführung, mit der Anonymitätserklärung, dem Hinweis auf den Wettbewerb und die Versuchspersonenstunden. Danach folgten die einzelnen Erhebungsinstrumente, beginnend mit der Erfassung der demographischen Daten, gefolgt vom Mediennutzungs-Fragebogen, dem Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen zum subjektiven Wohlbefinden. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme an einem Wettbewerb oder dem Erhalt für Versuchspersonenstunden, wenn sie Studierende der ZHAW in Psychologie waren, entscheiden. Zudem mussten die Teilnehmen angeben, ob sie die Fragen seriös ausgefüllt hatten. Der Fragebogen wurde mittels Pretest auf seine Funktionalität hin überprüft und erfolgte in zwei Schritten. Einerseits erlaubte die Software eine elektronische Testung des Fragebogens auf Korrektheit betreffend der möglichen Antwortpfaden. Dabei ging es um die Auswählbarkeit der Frageoptionen und die Erreichbarkeit aller aufgestellter Frageitems. In einem weiteren Schritt wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, die den kompletten Umfragebogen durchspieltn. Damit sollte sichergestellt werden, dass die Fragen und deren Anweisungen verständlich formuliert wurden und die Beantwortung der Fragen möglich war. Vor der Aktivschaltung des Fragebogens wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert.
 
-Nach der Fertigstellung der Umfrage wurde diese für die Teilnehmer online geschalten. Ab diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
+Nach der Fertigstellung der Umfrage wurde diese für die Teilnehmer online verfügbar gemacht. Ab diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde ein Dankes-Mail an alle Institutionen gesandt, die bei der Rekrutierung geholfen haben. In diesem Mail wurde darauf hingewiesen, dass mögliche Verlinkungen auf die Umfrage gelöscht und aufgelegte Flyer entsorgt werden sollen. Nach der Bereinigung der Daten wurden die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
 
 Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende July 2018 zur Bewertung eingereicht.
 
@@ -31,8 +31,20 @@ Der AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen L
 
 Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \titleref{app:AAS}).
 
-\textit{TBD: Operationalisierung}
+%Formel
+\begin{equation}\label{eq:MeanNähe}
+    M_{\text{\textit{N{\"a}he}}}=6-\frac{Nr_{3}+Nr_{8}+Nr_{13}+Nr_{14}+Nr_{18}}{5}
+\end{equation}
+\begin{equation}\label{eq:MeanVertrauen}
+    M_{Vertrauen}=\frac{Nr_{1}+Nr_{5}+Nr_{10}+Nr_{12}+Nr_{15}+Nr_{17}}{6}
+\end{equation}
+\begin{equation}\label{eq:MeanAngst}
+    M_{Angst}=\frac{Nr_{4}+Nr_{6}+Nr_{7}+Nr_{11}+Nr_{16}}{5}
+\end{equation}
+%Formel
+Die Operationalisiserung erfolgte anhand der drei Skalen Nähe, Vertrauen und Angst. Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 berechnet. Dabei wurde die Skala Nähe zwecks besserer Lesbarkeit positiv umkodiert. Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Je höher die Werte der Skala Nähe, desto eher fühlt sich ein Mensch mit Nähe wohl. Je höher die Ausprägung der Skala Vertrauen, desto eher Vertraut eine Person darauf, dass andere Menschen für ihn verfügbar sind. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
 
+\textit{TBD:} Sicher gebundene Menschen haben eine hohe Ausprägung der Skala Nähe und Vertrauen und eine geringe Ausprägung der Skala Angst.
 
 \subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
 Für die Erfassung der aktuellen subjektiv erlebten Belastung, wurde der \textit{Perceived Stress Questionnaire (PSQ)} von \citeA{Levenstein1993} in der deutschen Übersetzung von \citeA{Fliege2001} verwendet.
