--- a/header.tex
+++ b/header.tex
@@ -4,7 +4,8 @@
     a4paper,
     biblatex,
     apacite,
-    natbib]{apa6}
+    natbib,
+    longtable]{apa6}
     
 \usepackage[ngerman]{babel}
 \usepackage[utf8x]{inputenc}
@@ -17,7 +18,8 @@
 \usepackage{glossaries}
 \usepackage{array}
 \usepackage{multirow}
-\usepackage{longtable}
+\usepackage{xcolor,colortbl}
+%\usepackage{longtable}
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
 %------------------------------------------------
