--- a/main.tex
+++ b/main.tex
@@ -89,6 +89,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
+\input{content/Anhang/AAS.tex}
 \newpage
 
 % PSQ Fragebogen
