sec.Methode: Skala PSQ operationalisiert.

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -31,18 +31,19 @@ Der AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen L
 
 Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \titleref{app:AAS}).
 
+Die Operationalisiserung erfolgte anhand der Indizes für die drei Skalen Nähe, Vertrauen und Angst (siehe Formel \titleref{eq:IndexNähe}, \titleref{eq:IndexVertrauen}, \titleref{eq:IndexAngst}). Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 jeder Person berechnet. Die Skala Nähe wurde zwecks besserer Lesbarkeit positiv umkodiert. Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Tendenziell heisst das bei der Skala Nähe, dass sich Menschen mit einem hohen Wert eher mit Nähe wohl fühlen. Hohe Ausprägungen bei der Skala Vertrauen geht damit einher, dass anderen Menschen eher vertraut wird. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
 %Formel
-\begin{equation}\label{eq:MeanNähe}
-    M_{\text{\textit{N{\"a}he}}}=6-\frac{Nr_{3}+Nr_{8}+Nr_{13}+Nr_{14}+Nr_{18}}{5}
+\begin{equation}\label{eq:IndexNähe}
+    AAS~I_{\text{\textit{N{\"a}he}}}=6-\frac{AAS_{3}+AAS_{8}+AAS_{13}+AAS_{14}+AAS_{18}}{5}
 \end{equation}
-\begin{equation}\label{eq:MeanVertrauen}
-    M_{Vertrauen}=\frac{Nr_{1}+Nr_{5}+Nr_{10}+Nr_{12}+Nr_{15}+Nr_{17}}{6}
+\begin{equation}\label{eq:IndexVertrauen}
+    AAS~I_{Vertrauen}=\frac{AAS_{1}+AAS_{5}+AAS_{10}+AAS_{12}+AAS_{15}+AAS_{17}}{6}
 \end{equation}
-\begin{equation}\label{eq:MeanAngst}
-    M_{Angst}=\frac{Nr_{4}+Nr_{6}+Nr_{7}+Nr_{11}+Nr_{16}}{5}
+\begin{equation}\label{eq:IndexAngst}
+    AAS~I_{Angst}=\frac{AAS_{4}+AAS_{6}+AAS_{7}+AAS_{11}+AAS_{16}}{5}
 \end{equation}
 %Formel
-Die Operationalisiserung erfolgte anhand der drei Skalen Nähe, Vertrauen und Angst. Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 berechnet. Dabei wurde die Skala Nähe zwecks besserer Lesbarkeit positiv umkodiert. Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Je höher die Werte der Skala Nähe, desto eher fühlt sich ein Mensch mit Nähe wohl. Je höher die Ausprägung der Skala Vertrauen, desto eher Vertraut eine Person darauf, dass andere Menschen für ihn verfügbar sind. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
+
 
 \textit{TBD:} Sicher gebundene Menschen haben eine hohe Ausprägung der Skala Nähe und Vertrauen und eine geringe Ausprägung der Skala Angst.
 
@@ -52,15 +53,34 @@ Für die Erfassung der aktuellen subjektiv erlebten Belastung, wurde der \textit
 
 Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchungen von Zusammenhängen zwischen Stresserleben und Krankheitsentwicklung zu verwenden. Auch wenn in dieser Arbeit weder vom Medienverhalten noch vom subjektiven Wohlbefinden als Krankheit gesprochen werden kann, so sollen die Vorzüge dieses Instruments bezüglich der ökonomisch Durchführbarkeit, die Eignung zur Erfassung möglichst verschiedener Lebenskontexten von Erwachsenen und die Fokussierung auf das gegenwärtige Erleben hervorgehoben werden \cite{Fliege2001}. Bezüglich der empirischen Prüfung und Gütekriterien dieses Testinstruments kann gemäss \citeA{Naescher2009} von einer Auswertungsobjektivität, einer mittleren bis hohen Realiabilität und einer soliden Valildierung ausgegangen werden. Der Perceived Stress Questionnaire \cite{Fliege2001} ist für alle Erwachsenen und für verschiedene Lebenssituationen geeignet. Die deutsche Stichprobe, auf die sich die Werte beziehen, wurde an Probanden zwischen 17 und 79 Jahren erhoben. Der Fragebogen kann gemäss \citeA{Naescher2009} zur Diagnostik des subjektiven Belastungserlebens bei Erwachsenen zweifellos empfohlen werden.
 
-Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen. 
+Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen (siehe dazu auch Anhang \titleref{app:PSQ}. 
 
-TBD: Operationalisierung:
-Gemäss Text von \citeA{Naescher2009}: In der nachfolgenden Aufstellung entspricht die Zahl vor der Klammer jeweils der Nummer des Items in der gekürzten und die dahinterstehende Zahl in Klammern der Nummer des Items in der Normalversion. Bei Items mit einem * muss der Wert des Items von 5 abgezogen werden, bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht. Hierbei handelt es sich um die Items 01 (01), 06 (10) und 19 (29). 
-(a) Sorgen (worries): 05 (09), 07 (12), 10 (15), 13 (18), 15 (22); 
-(b) Anspannung (tension): 01* (01*), 06* (10*), 09 (14), 17 (26), 18 (27); 
-(c) Freude (joy): 04 (07), 08 (13), 12 (17), 14 (21), 16 (25); 
-(d) Anforderungen (demands): 02 (02), 03 (04), 11 (16), 19* (29*), 20 (30). 
-Die Werte der Items jeder Skala werden jeweils aufaddiert, mit -1 multipliziert und anschließend durch 3 dividiert. Hierdurch entsteht ein Wert zwischen 0 und 1, welcher im Anschluss mit 100 multipliziert wird. Das Ergebnis ist ein Skalenrang zwischen 0 und 100. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
+Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. Dabei wurden die Indizes der vier Skalen Sorgen, Anspannung, Freude und Anforderungen erstellt (siehe \titleref{eq:PSQIndexSorgen}, \titleref{eq:PSQIndexAnspannung}, \titleref{eq:PSQIndexFreude} und \titleref{eq:PSQIndexAnforderung}). 
+
+%Formel
+\begin{equation}\label{eq:PSQIndexSorgen}
+    PSQ~I_{Sorgen}=\frac{\frac{PSQ_{05}+PSQ_{07}+PSQ_{10}+PSQ_{13}+PSQ_{15}}{5}-1}{3}*100
+\end{equation}
+\begin{equation}\label{eq:PSQIndexAnspannung}
+    PSQ~I_{Anspannung}=\frac{\frac{(5-PSQ_{01})+(5-PSQ_{06})+PSQ_{09}+PSQ_{17}+PSQ_{18}}{5}-1}{3}*100
+\end{equation}
+\begin{equation}\label{eq:PSQIndexFreude}
+    PSQ~I_{Freude}=\frac{\frac{PSQ_{04}+PSQ_{08}+PSQ_{12}+PSQ_{14}+PSQ_{16}}{5}-1}{3}*100
+\end{equation}
+\begin{equation}\label{eq:PSQIndexAnforderung}
+    PSQ~I_{Anforderung}=\frac{\frac{PSQ_{02}+PSQ_{03}+PSQ_{11}+(5-PSQ_{19})+PSQ_{20}}{5}-1}{3}*100
+\end{equation}
+
+Die Werte der Items jeder Skala werden aufaddiert und durch die Anzahl der Items dividiert, um den Mittelwert zu erhalten. Anschliessend wird eine lineare Transformation des Skalenranges von 1 bis 4 zu 1 bis 3 vorgenommen, indem der Mittelwert mit -1 multipliziert wird. Die weitere lineare Transformation mittels Division durch 3 ergibt einen Wert zwischen 0 und 1, welcher multipliziert mit 100 ein Skalenrange zwischen 0 und 100 ergibt. Zu beachten ist, dass bei gewissen Items ( im Anhang mit einem * gekennzeichnet) der Wert des Items von 5 abgezogen werden muss, bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht. Hierbei handelt es sich um die drei Items $PSQ_{01}$, $PSQ_{06}$ und $PSQ_{19}$. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
+
+Für den Gesamtscore wird die Skala Freude umkodiert:
+
+%Formel
+\begin{equation}\label{eq:PSQGesamtscore}
+    PSQ~I_{Gesamtscore}=\frac{PSQ~I_{Sorgen}+PSQ~I_{Anspannung}+ (100-PSQ~I_{Freude})+PSQ~I_{Anforderung}}{4}
+\end{equation}
+
+In den Gesamtscore fliessen die oben berechneten Skalen ein und ergeben das allgemeine Stresserleben, respektive die aktuelle, subjektiv erlebte Belastung einer Person.
 
 \subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
 Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (SHS)}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der SHS wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt, erfasst wird  \cite[S.~139ff]{Lyubomirsky1999}. Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen. Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala. 
