--- a/main.tex
+++ b/main.tex
@@ -94,6 +94,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 % PSQ Fragebogen
 \section{Perceived Stress Questionnaire (PSQ)}\label{app:PSQ}
+\input{content/Anhang/PSQ.tex}
 \newpage
 
 % SHS Fragebogen
