--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -6,7 +6,11 @@ In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein st
 
 Die Umsetzung des Fragebogens richtete sich an die von der Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018} vorgegebenen Frageoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden). Gestartet wurde die Umfrage mit einer kurzen Einführung, mit der Anonymitätserklärung, dem Hinweis auf den Wettbewerb und die Versuchspersonenstunden. Danach folgten die einzelnen Erhebungsinstrumente, beginnend mit der Erfassung der demographischen Daten, gefolgt vom Mediennutzungs-Fragebogen, dem Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen zum subjektiven Wohlbefinden. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme an einem Wettbewerb oder dem Erhalt für Versuchspersonenstunden, wenn sie Studierende der ZHAW in Psychologie waren, entscheiden. Zudem mussten die Teilnehmen angeben, ob sie die Fragen seriös ausgefüllt hatten. Der Fragebogen wurde mittels Pretest auf seine Funktionalität hin überprüft und erfolgte in zwei Schritten. Einerseits erlaubte die Software eine elektronische Testung des Fragebogens auf Korrektheit betreffend der möglichen Antwortpfaden. Dabei ging es um die Auswählbarkeit der Frageoptionen und die Erreichbarkeit aller aufgestellter Frageitems. In einem weiteren Schritt wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, die den kompletten Umfragebogen durchspieltn. Damit sollte sichergestellt werden, dass die Fragen und deren Anweisungen verständlich formuliert wurden und die Beantwortung der Fragen möglich war. Vor der Aktivschaltung des Fragebogens wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert.
 
-Nach der Fertigstellung der Umfrage wurde diese für die Teilnehmer online verfügbar gemacht. Ab diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde ein Dankes-Mail an alle Institutionen gesandt, die bei der Rekrutierung geholfen haben. In diesem Mail wurde darauf hingewiesen, dass mögliche Verlinkungen auf die Umfrage gelöscht und aufgelegte Flyer entsorgt werden sollen. Nach der Bereinigung der Daten wurden die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
+Nach der Fertigstellung der Umfrage wurde diese für die Teilnehmer online verfügbar gemacht. Ab diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt.
+
+Kurz vor Ende der Umfrage wurde eine Mail an alle an der Rekrutierung involvierten Personen gesandt, um auf das Ende der Umfrage hinzuweisen und ein Dankeschön für die Mithilfe auszusprechen. In diesem Schreiben wurden die Beteiligten darauf hingewiesen, dass sie aufgelgete Flyer entsorgen und geteilte Links entfernen sollen. 
+
+Direkt  nach der Beendingung der Umfrage wurden die Daten bereinigt und in einem Brutto- und Nettodatensatz abgelegt. Es wurden die zum Bezug von Versuchpersonenstunden berechtigte Personen ermittelt und der ZHAW gemeldet. Zudem wurden die Gewinner des Wettberwerbs mittels randomisierter Ziehung gezogen und informiert. Im Anschluss wurden die Daten aufgearbeitet, um die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) zu prüfen und die Beantwortung der Fragestellung vornehmen zu können.
 
 Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende July 2018 zur Bewertung eingereicht.
 
@@ -71,7 +75,7 @@ Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. 
     PSQ~I_{Anforderung}=\frac{\frac{PSQ_{02}+PSQ_{03}+PSQ_{11}+(5-PSQ_{19})+PSQ_{20}}{5}-1}{3}*100
 \end{equation}
 
-Die Werte der Items jeder Skala werden aufaddiert und durch die Anzahl der Items dividiert, um den Mittelwert zu erhalten. Anschliessend wird eine lineare Transformation des Skalenranges von 1 bis 4 zu 1 bis 3 vorgenommen, indem der Mittelwert mit -1 multipliziert wird. Die weitere lineare Transformation mittels Division durch 3 ergibt einen Wert zwischen 0 und 1, welcher multipliziert mit 100 ein Skalenrange zwischen 0 und 100 ergibt. Zu beachten ist, dass bei gewissen Items ( im Anhang mit einem * gekennzeichnet) der Wert des Items von 5 abgezogen werden muss, bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht. Hierbei handelt es sich um die drei Items $PSQ_{01}$, $PSQ_{06}$ und $PSQ_{19}$. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
+Die Werte der Items jeder Skala werden aufaddiert und durch die Anzahl der Items dividiert, um den Mittelwert zu erhalten. Anschliessend wird eine lineare Transformation des Skalenranges von 1 bis 4 zu 1 bis 3 vorgenommen, indem vom Mittelwert 1 subtrahiert wird. Die weitere lineare Transformation mittels Division durch 3 ergibt einen Wert zwischen 0 und 1, welcher multipliziert mit 100 ein Skalenrange zwischen 0 und 100 ergibt. Zu beachten ist, dass bei gewissen Items der Wert des Items von 5 abgezogen werden muss, bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht (im Anhang \titleref{app:PSQ} mit einem * gekennzeichnet). Hierbei handelt es sich um die drei Items $PSQ_{01}$, $PSQ_{06}$ und $PSQ_{19}$. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
 
 Für den Gesamtscore wird die Skala Freude umkodiert:
 
@@ -83,13 +87,17 @@ Für den Gesamtscore wird die Skala Freude umkodiert:
 In den Gesamtscore fliessen die oben berechneten Skalen ein und ergeben das allgemeine Stresserleben, respektive die aktuelle, subjektiv erlebte Belastung einer Person.
 
 \subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
-Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (SHS)}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der SHS wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt, erfasst wird  \cite[S.~139ff]{Lyubomirsky1999}. Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen. Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala. 
+Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (SHS)}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der SHS wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt, erfasst wird  \cite[S.~139ff]{Lyubomirsky1999}. Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen. Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala (z.B.: 1 für \textit{Kein glücklicher Mensch} bis 7 \textit{Sehr glücklicher Mensch}). 
 
 \citeA{Lyubomirsky1999} weisen darauf hin, dass der SHS sich für die Erfassung des subjektiven Wohlbefindens besser eignet als andere vergleichbare Instrumente (z.B.: \textit{Affect Balance Scale} oder \textit{the Satisfaction With Life Scale}), da der Fragebogen eine globale subjektive Einschätzung bezügliche Wohlbefinden vornimmt, im Gegensatz zur Erfassung von eigentlichen Glückszuständen, die einer bestimmte Zeitspanne zuzuordnen sind (z.B.: affektive und kognitive Zustände). Der Fragebogen wurde in 14 Studien mit einem Total von 2,732 Teilnehmern validiert. Die Daten wurden innerhalb der vereinigten Staaten anhand von Studenten zweier Universitäten und einer Mittelschule, von Erwachsenen innerhalb zweier Städten in Kalifornien   erhoben. Zudem wurden Teilnehmer aus Moswkau, Russland beigezogen. Demzufolge soll der SHS eine hohe interne Konsistenz aufweisen, welche über alle Stichproben stabil blieben. Die Test-Retest-Korrelation und die Korrelation zwischen Eigen- und Fremdeinschätzung deuten auf eine gute bis sehr gute Realiabilität hin. 
 Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklich das Konstrukt subjektives Wohlbefinden misst (vgl. ebd.). \citeA{Swami2009} konnten in ihrer Studie nachweisen, dass es sich bei der deutschen Übersetzung um eine unidimensionale Struktur, mit einer hohen internen Konsitenz handelt. Diese Übersetzung korrelierte hoch mit anderen Messinstrumenten, welche das subjektive Wohlbefinden erfassen. Demzufolge habe der neue Fragebogen eine gute Konvergenzvalidität. Hingegen konnten die Forscher keine Aussage über die Test-Retest-Reliabilität machen, noch nahmen sie eine Validierungsprüfung vor, da dies nicht zum Gegenstand ihrer Überprüfung zählte (vgl. ebd.).
 
-TBD: Operationalisierung:
+Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \cite{Lyubomirsky1999} und ergibt einen SHS-Index (siehe \titleref{eq:SHS}. Die mögliche Ausprägung dieses Index reicht von 1.0 bis 7.0, wobei eine höhere Ausprägung für ein grössere subjektive Zufriedenheit steht.
 
+%Formel
+\begin{equation}\label{eq:SHS}
+    SHS~I=\frac{SHS_{1}+SHS_{2}+SHS_{3}+SHS_{4}}{4}
+\end{equation}
 
 \subsection{Datenerhebung \& Rekrutierung}
 Zur Datengewinnung wurde die von der ZHAW zur Verfügung gestellten Umfragesoftware Enterprise Feedback Suite in der Version 10.9 der Firma \citeA{Questback2018} verwendet. Der Fragebogen wurde mit Hilfe der zur Verfügung gestellten Dokumentation kreiert \cite{EFS2016} und wurde Mitte Januar bis Ende Mai 2018 aktiv geschaltet.  Der Zugang zur Befragung erfolgte über die von der Firma \citeA{Questback2018} zur Verfügung gestellten öffentlichen Internetadresse, welche zum Zeitpunkt der Befragung wie folgt lautete: https://ww2.unipark.de/uc/elternfragebogen/.
@@ -98,11 +106,14 @@ Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel die
 
 Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \titleref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
 
-\textit{TBD: Beschreibung der Datenbereinigung:} Am Ende der Umfrage erfolgte die Datenbereinigung...
-
+\textit{TBD: Anreiz} Wettbewerb und VPN Stunden...
 
 \subsection{Beschreibung der Stichprobe}
-Die Stichprobe umfasste insgesamt 233 Personen. Die Merkmale Geschlecht, Alter (in Jahren), etc. sind in Tabelle \ref{table:Stichprobe} dargestellt.
+Insgesamt schlossen brutto 248 Personen die Umfrage ab. 1454 Personen sind zumindest auf die erste Seite gekommen und haben anschliessend abgebrochen. Dies entspricht einer Beendingungsquote von 17.06\%. Die meisten Abbrüche sind auf der Startseite mit 1045 zu verzeichnen (71.87\%), gefolgt von den demografischen Daten mit 100 (6.88\%) und Medien und Mediennutzung mit 44 (3\%). Die mittlere Bearbeitungszeit des Fragebogens dauerte 27 Minuten. 
+
+Nach der Datenbereinigung blieben netto 245 Personen übrig. Zwei Personen wurden ausgemustert, da sie beim Jahrgang fehlerhafte Werte angegeben hatten (Person1 = Jg 2017, Person2 = Jg 0). Eine weitere Person wurde aus dem Datensatz gelöscht, da die Person angegeben hatte, die Umfrage nicht seriös ausgefüllt zu haben. 
+
+Die Merkmale Geschlecht, Alter (in Jahren), etc. sind in Tabelle \ref{table:Stichprobe} dargestellt.
 
 \begin{table}[htbp]
 
@@ -110,16 +121,19 @@ Die Stichprobe umfasste insgesamt 233 Personen. Die Merkmale Geschlecht, Alter (
   \hline
   \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
   \hline
+  \multicolumn{2}{l}{Total Probanden} \\
+  & bereinigt & 245\\
   \multicolumn{2}{l}{Geschlecht} \\ 
-   & weiblich & 212 (91)\\ 
-   & männlich & 20 (8.6)\\ 
-   & keine Angbabe & 1 (.4)\\ 
+   & weiblich & 224 (91.4)\\ 
+   & männlich & 20 (8.2)\\ 
+   & keine Angabe & 1 (.4)\\ 
    
   \multicolumn{2}{l}{Alter in Jahren} \\
-  & $M$ (Min./Max.) & 33.8 (20/48) \\
-  & $SD$ & 4.6 \\
+  & $M$ (Min./Max.) & 33.9 (20/48) \\
+  & $SD$ & 4.5 \\
    
   \hline
+  &&\\
 \end{tabular}
 \caption{Gesamtstichprobe}
 \label{table:Stichprobe}
