sec:Methode - error corrections

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -35,21 +35,20 @@ Der AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen L
 
 Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \titleref{app:AAS}).
 
-Die Operationalisiserung erfolgte anhand der Indizes für die drei Skalen Nähe, Vertrauen und Angst (siehe Formel \titleref{eq:IndexNähe}, \titleref{eq:IndexVertrauen}, \titleref{eq:IndexAngst}). Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 jeder Person berechnet. Die Skala Nähe wurde zwecks besserer Lesbarkeit positiv umkodiert. Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Tendenziell heisst das bei der Skala Nähe, dass sich Menschen mit einem hohen Wert eher mit Nähe wohl fühlen. Hohe Ausprägungen bei der Skala Vertrauen geht damit einher, dass anderen Menschen eher vertraut wird. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
+Die Operationalisiserung erfolgte anhand der Indizes für die drei Skalen Nähe, Vertrauen und Angst (siehe Formel \titleref{eq:IndexNähe}, \titleref{eq:IndexVertrauen}, \titleref{eq:IndexAngst}). Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 jeder Person berechnet. Zu beachten ist, dass alle Items in der Skala Nähe und die Items $AAS_{5}$, $AAS_{10}$, $AAS_{15}$ und $AAS_{17}$ der Skala Vertrauen für die Erstellung des Skalenwerts umkodiert werden müssen (im Anhang \titleref{app:AAS} mit einem * gekennzeichnet). Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Tendenziell heisst das bei der Skala Nähe, dass Menschen mit einem hohen Wert, sich bei Nähe zu anderen Menschen eher wohl fühlen. Hohe Ausprägungen bei der Skala Vertrauen geht tendenziell mit einem grösseren Vertrauen anderen Menschen gegenüber einher. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
 %Formel
 \begin{equation}\label{eq:IndexNähe}
     AAS~I_{\text{\textit{N{\"a}he}}}=6-\frac{AAS_{3}+AAS_{8}+AAS_{13}+AAS_{14}+AAS_{18}}{5}
 \end{equation}
 \begin{equation}\label{eq:IndexVertrauen}
-    AAS~I_{Vertrauen}=\frac{AAS_{1}+AAS_{5}+AAS_{10}+AAS_{12}+AAS_{15}+AAS_{17}}{6}
+    AAS~I_{Vertrauen}=\frac{AAS_{1}+(6-AAS_{5})+(6-AAS_{10})+AAS_{12}+(6-AAS_{15})+(6-AAS_{17})}{6}
 \end{equation}
 \begin{equation}\label{eq:IndexAngst}
     AAS~I_{Angst}=\frac{AAS_{4}+AAS_{6}+AAS_{7}+AAS_{11}+AAS_{16}}{5}
 \end{equation}
-%Formel
 
+Wie bereits oben beschrieben, lassen sich gemäss \citeA{Schmidt2004} mit dem deutschen Instrument die Bindungsstile nicht direkt zuordnen, sondern in zugrunde liegende Dimensionen einteilen \cite{Schuetzmann2004}. Anhand den Ausprägungen der Probanden in den drei Skalen lassen sich drei Cluster definieren: Im Cluster \textit{sicher} sind Probanden mit hohen Werten bei den Skalen Nähe und Vertrauen und niedrige Werte bei der Skala Angst enthalten. Das Cluster \textit{ängstlich} beinhaltet Probanden mit hohen Werten bei der Skala Angst und mittlere Werte bei den Skalen Nähe und Vertrauen. Im dritten Cluster \textit{vermeidend} befinden sich Probanden, die auf allen drei Skalen Nähe, Vertrauen und Angst tiefe Werte aufweisen.
 
-\textit{TBD:} Sicher gebundene Menschen haben eine hohe Ausprägung der Skala Nähe und Vertrauen und eine geringe Ausprägung der Skala Angst.
 
 \subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
 Für die Erfassung der aktuellen subjektiv erlebten Belastung, wurde der \textit{Perceived Stress Questionnaire (PSQ)} von \citeA{Levenstein1993} in der deutschen Übersetzung von \citeA{Fliege2001} verwendet.
