--- a/content/Anhang/AAS.tex
+++ b/content/Anhang/AAS.tex
@@ -10,22 +10,22 @@ Die im Folgenden dargestellte Adult Attachment Sacale (AAS) wurde aus der Validi
   Nr. & Text & Orig. \\ 
   \hline\hline
   \rowcolor{lightgray}
-  \multicolumn{3}{|l|}{Nähe*}\\
+  \multicolumn{3}{|l|}{Nähe}\\
   \hline
-  02 & Es macht mich nervös, wenn mir jemand zu nahe ist. & 03 \\
-  07 & Für mich ist es schwierig, andere an mich heranzulassen. & 08 \\
-  11 & Es ist mir irgendwie unangenehm, mit anderen zu vertraut zu werden. & 13 \\
-  12 & In Freundschaften wünschen sich meine Freunde/meine Freundinnen häufig mehr Nähe von mir, als mir angenehm ist. & 14 \\
-  16 & Die Vorstellung, mir könnte jemand nahe kommen, beunruhigt mich. & 18 \\
+  02 & Es macht mich nervös, wenn mir jemand zu nahe ist.* & 03 \\
+  07 & Für mich ist es schwierig, andere an mich heranzulassen.* & 08 \\
+  11 & Es ist mir irgendwie unangenehm, mit anderen zu vertraut zu werden.* & 13 \\
+  12 & In Freundschaften wünschen sich meine Freunde/meine Freundinnen häufig mehr Nähe von mir, als mir angenehm ist.* & 14 \\
+  16 & Die Vorstellung, mir könnte jemand nahe kommen, beunruhigt mich.* & 18 \\
   \hline
   \rowcolor{lightgray} \multicolumn{3}{|l|}{Vertrauen}\\
   \hline
   01 & Ich weiß, wenn ich jemand brauche, wird auch jemand da sein. & 01 \\
-  04 & Ich bin mir nicht sicher, ob ich mich immer darauf verlassen kann, dass andere da sind, wenn ich sie brauche. & 05\\
-  08 & Menschen sind nie da, wenn man sie braucht. & 10 \\
+  04 & Ich bin mir nicht sicher, ob ich mich immer darauf verlassen kann, dass andere da sind, wenn ich sie brauche.* & 05\\
+  08 & Menschen sind nie da, wenn man sie braucht.* & 10 \\
   10 & Ich kann mich gut auf andere verlassen. & 12\\
-  13 & Ich kann es mir nur schwer zugestehen, mich auf andere zu verlassen. & 15\\
-  15 & Es fällt mir schwer, anderen voll und ganz zu vertrauen. & 17\\
+  13 & Ich kann es mir nur schwer zugestehen, mich auf andere zu verlassen.* & 15\\
+  15 & Es fällt mir schwer, anderen voll und ganz zu vertrauen.* & 17\\
   \hline
   \rowcolor{lightgray} \multicolumn{3}{|l|}{Angst}\\
   \hline
@@ -35,8 +35,7 @@ Die im Folgenden dargestellte Adult Attachment Sacale (AAS) wurde aus der Validi
   09 & Ich mache mir oft Sorgen, ein wichtiger Mensch könnte mich verlassen. & 11 \\
   14 & Ich mache mir oft Sorgen, dass meine Freunde/meine Freundinnen eines Tages nicht mehr mit mir befreundet sein möchten. & 16 \\
   \hline
-  \multicolumn{3}{l}{* Diese Skala wurde bei der Berechnung des Mittelwerts invertiert,}\\
-  \multicolumn{3}{l}{~~~damit \textit{Nähe} eine positive Ausprägung bekommt.}\\
+  \multicolumn{3}{l}{* Die Items wurden für die Erstellung des Skalenwertes umcodiert.}\\
   \multicolumn{3}{l}{}\\
 \end{tabular}
 \caption{Items der Adult Attachment Scale}
